# chatgpt-cli

./: Cargo.toml  mock_chat_response.json
.devcontainer/: devcontainer.json
src/: main.rs
src/chatgpt/: api.rs  mock.rs  mod.rs
