[package]
name = "chatgpt-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = []
mock = []